--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-github-button",
+  "name": "@0xJacky/vue-github-button",
   "version": "3.1.0",
   "description": "GitHub button component for Vue.js",
   "main": "index.js",
